--- a/terraform/hello_ecs_fargate/tasks/hello.json.tmpl
+++ b/terraform/hello_ecs_fargate/tasks/hello.json.tmpl
@@ -20,6 +20,10 @@
       {
         "name": "VERSION",
         "value": "${hello_tag}"
+      }, 
+      {
+        "name": "ENV",
+        "value": "${env}"
       } 
     ],
     "essential": true,
